[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures-util = "0.3.31"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.3.1"
uuid = { version = "1.13.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.10"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["cors"] }
sentry = { version = "0.42.0", features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "transport",
  "tracing",
  "logs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "json",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
async-stream = "0.3.5"
anyhow = "1.0.99"
dotenvy = "0.15.7"
