[workspace]
members = [
  "services/gateway",
  "services/publish",
  "shared/broker", "shared/monitoring",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
sentry_protos = "0.3.5"
anyhow = "1.0.99"
async-stream = "0.3.5"
async-trait = "0.1.89"
axum = "0.8.4"
chrono = "0.4.42"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "cluster"] }
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager", "cluster-async"] }
jsonwebtoken = "9.3.1"
metrics-exporter-dogstatsd = "0.9.6"
metrics = "0.24.2"
mockall = "0.13.1"
prost = "0.13"
prost-types = "0.13.3"
uuid = { version = "1.13.0", features = ["v4", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.10"
rand = "0.9.2"
rsa = "0.9.8"
thiserror = "2.0.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
sentry = { version = "0.42.0", features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "transport",
    "tracing",
    "logs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "json",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
dotenvy = "0.15.7"
