[package]
name = "cleanup"
version = "0.1.0"
edition.workspace = true

[dependencies]
broker = { path = "../../shared/broker" }
monitoring = { path = "../../shared/monitoring" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
metrics = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
uuid = { workspace = true }
