[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
broker = { path = "../../shared/broker" }
monitoring = { path = "../../shared/monitoring" }
sentry_protos = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
