[package]
name = "publish"
version = "0.1.0"
edition.workspace = true

[dependencies]
broker = { path = "../../shared/broker" }
monitoring = { path = "../../shared/monitoring" }
sentry_protos = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
mockall = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
