[package]
name = "broker"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
deadpool-redis = { workspace = true }
mockall = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
