[package]
name = "monitoring"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
metrics-exporter-statsd = { workspace = true }
metrics = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
